include/Win64/Physics.ODEImport.hpp

struct TdxPosR;
struct TdxBody;
struct TdContactGeom;
struct TdGeomClass;
struct TdxTriMeshData;
struct TdxHeightfieldData;
struct TdGeomSpaceData;
struct TdxGeom;
class DELPHICLASS TGeomList;
struct TdxSpace;
struct TdxHashSpace;
struct TdxQuadTreeSpace;
typedef float TdReal;
typedef System::StaticArray<float, 4> TdVector3;
typedef System::StaticArray<float, 6> TdAABB;
typedef TdxGeom *PdxGeom;
typedef PdxGeom *PPdxGeom;
typedef TdxBody *PdxBody;
typedef TdxPosR *PdxPosR;
struct DECLSPEC_DRECORD TdxPosR
{
public:
	TdVector3 pos;
	TdMatrix3 R;
};
struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject baseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdContactGeom
{
public:
	TdVector3 pos;
	TdVector3 normal;
	float depth;
	TdxGeom *g1;
	TdxGeom *g2;
	int side1;
	int side2;
};
typedef TdContactGeom *PdContactGeom;
typedef void __cdecl (*TdNearCallback)(void * data, PdxGeom o1, PdxGeom o2);
typedef int __cdecl (*TdColliderFn)(PdxGeom o1, PdxGeom o2, int flags, PdContactGeom contact, int skip);
typedef TdColliderFn __cdecl (*TdGetColliderFnFn)(int num);
typedef void __cdecl (*TdGetAABBFn)(PdxGeom g, TdAABB &aabb);
typedef void __cdecl (*TdGeomDtorFn)(PdxGeom o);
typedef int __cdecl (*TdAABBTestFn)(PdxGeom o1, PdxGeom o2, const TdAABB &aabb2);
struct DECLSPEC_DRECORD TdGeomClass
{
public:
	int bytes;
	TdGetColliderFnFn collider;
	TdGetAABBFn aabb;
	TdAABBTestFn aabb_test;
	TdGeomDtorFn dtor;
};
typedef TdGeomClass *PdGeomClass;
typedef TdxSpace *PdxSpace;
typedef System::StaticArray<float, 65536> TdRealHugeArray;
typedef TdRealHugeArray *PdRealHugeArray;
typedef System::StaticArray<int, 65536> TdIntegerArray;
typedef TdIntegerArray *PdIntegerArray;
typedef System::StaticArray<System::StaticArray<float, 4>, 65536> TdVector3Array;
typedef TdVector3Array *PdVector3Array;
struct DECLSPEC_DRECORD TdxTriMeshData
{
public:
	System::Byte unknown;
};
typedef TdxTriMeshData *PdxTriMeshData;
struct DECLSPEC_DRECORD TdxHeightfieldData
{
public:
	float m_fWidth;
	float m_fDepth;
	float m_fSampleWidth;
	float m_fSampleDepth;
	float m_fInvSampleWidth;
	float m_fInvSampleDepth;
	float m_fHalfWidth;
	float m_fHalfDepth;
	float m_fMinHeight;
	float m_fMaxHeight;
	float m_fThickness;
	float m_fScale;
	float m_fOffset;
	int m_nWidthSamples;
	int m_nDepthSamples;
	int m_bCopyHeightData;
	int m_bWrapMode;
	int m_nGetHeightMode;
	void *m_pHeightData;
	void *m_pUserData;
	TdContactGeom *m_contacts;
};
typedef TdxHeightfieldData *PdxHeightfieldData;
typedef TdxSpace *PdxSimpleSpace;
typedef TdxHashSpace *PdxHashSpace;
struct DECLSPEC_DRECORD TdGeomSpaceData
{
public:
	TdxGeom *next;
};
struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};
struct DECLSPEC_DRECORD TdxSpace
{
public:
	TdxGeom baseGeom;
	int count;
	TdxGeom *first;
	int cleanup;
	int current_index;
	TdxGeom *current_geom;
	int lock_count;
};
typedef TdxSpace TdxSimpleSpace;
struct DECLSPEC_DRECORD TdxHashSpace
{
public:
	TdxSpace BaseSpace;
	int global_minlevel;
	int global_maxlevel;
};
struct DECLSPEC_DRECORD TdxQuadTreeSpace
{
public:
	TdxSpace BaseSpace;
	void *Blocks;
	void *DirtyList;
};
typedef int TJointParams;
//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode64s.dll"
extern DELPHI_PACKAGE int dParamLoStop;
extern DELPHI_PACKAGE int dParamHiStop;
extern DELPHI_PACKAGE int dParamVel;
extern DELPHI_PACKAGE int dParamFMax;
extern DELPHI_PACKAGE int dParamFudgeFactor;
extern DELPHI_PACKAGE int dParamBounce;
extern DELPHI_PACKAGE int dParamCFM;
extern DELPHI_PACKAGE int dParamStopERP;
extern DELPHI_PACKAGE int dParamStopCFM;
extern DELPHI_PACKAGE int dParamSuspensionERP;
extern DELPHI_PACKAGE int dParamSuspensionCFM;
extern DELPHI_PACKAGE int dParamERP;
extern DELPHI_PACKAGE int dParamGroup1;
extern DELPHI_PACKAGE int dParamLoStop1;
extern DELPHI_PACKAGE int dParamHiStop1;
extern DELPHI_PACKAGE int dParamVel1;
extern DELPHI_PACKAGE int dParamFMax1;
extern DELPHI_PACKAGE int dParamFudgeFactor1;
extern DELPHI_PACKAGE int dParamBounce1;
extern DELPHI_PACKAGE int dParamCFM1;
extern DELPHI_PACKAGE int dParamStopERP1;
extern DELPHI_PACKAGE int dParamStopCFM1;
extern DELPHI_PACKAGE int dParamSuspensionERP1;
extern DELPHI_PACKAGE int dParamSuspensionCFM1;
extern DELPHI_PACKAGE int dParamERP1;
extern DELPHI_PACKAGE int dParamGroup2;
extern DELPHI_PACKAGE int dParamLoStop2;
extern DELPHI_PACKAGE int dParamHiStop2;
extern DELPHI_PACKAGE int dParamVel2;
extern DELPHI_PACKAGE int dParamFMax2;
extern DELPHI_PACKAGE int dParamFudgeFactor2;
extern DELPHI_PACKAGE int dParamBounce2;
extern DELPHI_PACKAGE int dParamCFM2;
extern DELPHI_PACKAGE int dParamStopERP2;
extern DELPHI_PACKAGE int dParamStopCFM2;
extern DELPHI_PACKAGE int dParamSuspensionERP2;
extern DELPHI_PACKAGE int dParamSuspensionCFM2;
extern DELPHI_PACKAGE int dParamERP2;
extern DELPHI_PACKAGE int dParamGroup3;
extern DELPHI_PACKAGE int dParamLoStop3;
extern DELPHI_PACKAGE int dParamHiStop3;
extern DELPHI_PACKAGE int dParamVel3;
extern DELPHI_PACKAGE int dParamFMax3;
extern DELPHI_PACKAGE int dParamFudgeFactor3;
extern DELPHI_PACKAGE int dParamBounce3;
extern DELPHI_PACKAGE int dParamCFM3;
extern DELPHI_PACKAGE int dParamStopERP3;
extern DELPHI_PACKAGE int dParamStopCFM3;
extern DELPHI_PACKAGE int dParamSuspensionERP3;
extern DELPHI_PACKAGE int dParamSuspensionCFM3;
extern DELPHI_PACKAGE int dParamERP3;
extern DELPHI_PACKAGE int dParamGroup;
extern "C" void __cdecl dInitODE(void);
extern "C" int __cdecl dInitODE2(unsigned uiInitFlags);
extern "C" void __cdecl dCloseODE(void);
extern "C" void __cdecl dSpaceCollide(const PdxSpace Space, void * data, TdNearCallback callback);