Source/Physics.ODEImport.pas


  TdColliderFn = function(o1, o2: PdxGeom; flags: Integer;
    contact: PdContactGeom; skip: Integer): Integer; cdecl;
  TdGetColliderFnFn = function(num: Integer): TdColliderFn; cdecl;
  TdGetAABBFn = procedure(g: PdxGeom; var aabb: TdAABB); cdecl;
  TdGeomDtorFn = procedure(o: PdxGeom); cdecl;
  TdAABBTestFn = function(o1, o2: PdxGeom; const aabb2: TdAABB): Integer; cdecl;

  (* typedef struct dGeomClass {
    int bytes;
    dGetColliderFnFn *collider;
    dGetAABBFn *aabb;
    dAABBTestFn *aabb_test;
    dGeomDtorFn *dtor;
    } dGeomClass; *)

  TdGeomClass = record
    bytes: Integer; // extra storage size
    collider: TdGetColliderFnFn; // collider function
    aabb: TdGetAABBFn; // bounding box function
    aabb_test: TdAABBTestFn; // aabb tester, can be 0 for none
    dtor: TdGeomDtorFn; // destructor, can be 0 for none
  end;

  PdGeomClass = ^TdGeomClass;

  (* struct dxSpace : public dBase {
    int type;			// don't want to use RTTI
    virtual void destroy()=0;
    virtual void add (dGeomID)=0;
    virtual void remove (dGeomID)=0;
    virtual void collide (void *data, dNearCallback *callback)=0;
    virtual int query (dGeomID)=0;
    }; *)

  PdxSpace = ^TdxSpace;

  TdRealHugeArray = array [0 .. 65535] of TdReal;
  PdRealHugeArray = ^TdRealHugeArray;

  // Tri-list collider
  TdIntegerArray = array [0 .. 65535] of Integer;
  PdIntegerArray = ^TdIntegerArray;

  TdVector3Array = array [0 .. 65535] of TdVector3;
  PdVector3Array = ^TdVector3Array;

  (* struct dxTriMeshData{
    Model BVTree;
    MeshInterface Mesh;

    dxTriMeshData();
    ~dxTriMeshData();

    void Build(const void* Vertices, int VertexStide, int VertexCount,
    const void* Indices, int IndexCount, int TriStride,
    const void* Normals,
    bool Single);

    /* aabb in model space */
    dVector3 AABBCenter;
    dVector3 AABBExtents;

    /* data for use in collison resolution */
    const void* Normals;
    Matrix4x4   last_trans;
    }; *)
  TdxTriMeshData = record
    unknown: byte; //
  end;

  PdxTriMeshData = ^TdxTriMeshData;

  TdxHeightfieldData = record
    m_fWidth: TdReal;
    m_fDepth: TdReal;
    m_fSampleWidth: TdReal;
    m_fSampleDepth: TdReal;
    m_fInvSampleWidth: TdReal;
    m_fInvSampleDepth: TdReal;
    m_fHalfWidth: TdReal;
    m_fHalfDepth: TdReal;
    m_fMinHeight: TdReal;
    m_fMaxHeight: TdReal;
    m_fThickness: TdReal;
    m_fScale: TdReal;
    m_fOffset: TdReal;
    m_nWidthSamples: Integer;
    m_nDepthSamples: Integer;
    m_bCopyHeightData: Integer;
    m_bWrapMode: Integer;
    m_nGetHeightMode: Integer;
    m_pHeightData: pointer;
    m_pUserData: pointer;
    m_contacts: PdContactGeom;
  end;

  PdxHeightfieldData = ^TdxHeightfieldData;

  (* //simple space - reports all n^2 object intersections
    struct dxSimpleSpace : public dxSpace {
    dGeomID first;
    void destroy();
    void add (dGeomID);
    void remove (dGeomID);
    void collide (void *data, dNearCallback *callback);
    int query (dGeomID);
    }; *)

  PdxSimpleSpace = ^TdxSimpleSpace;

  (* //currently the space 'container' is just a list of the geoms in the space.
    struct dxHashSpace : public dxSpace {
    dxGeom *first;
    int global_minlevel;	// smallest hash table level to put AABBs in
    int global_maxlevel;	// objects that need a level larger than this will be
    // put in a "big objects" list instead of a hash table
    void destroy();
    void add (dGeomID);
    void remove (dGeomID);
    void collide (void *data, dNearCallback *callback);
    int query (dGeomID);
    }; *)

  PdxHashSpace = ^TdxHashSpace;

  (* typedef struct dGeomSpaceData {
    dGeomID next;
    } dGeomSpaceData; *)

  TdGeomSpaceData = record
    next: PdxGeom;
  end;

  (* // common data for all geometry objects. the class-specific data area follows
    // this structure. pos and R will either point to a separately allocated
    // buffer (if body is 0 - pos points to the dxPosR object) or to the pos and
    // R of the body (if body nonzero).
    struct dxGeom {		// a dGeomID is a pointer to this
    dxGeomClass *_class;	// class of this object
    void *data;		// user data pointer
    dBodyID body;		// dynamics body associated with this object (if any)
    dReal *pos;		// pointer to object's position vector
    dReal *R;		// pointer to object's rotation matrix
    dSpaceID spaceid;	// the space this object is in
    dGeomSpaceData space;	// reserved for use by space this object is in
    dReal *space_aabb;	// ptr to aabb array held by dSpaceCollide() fn
    // class-specific data follows here, with proper alignment.
    }; *)

  TdxGeom = record // a dGeomID is a pointer to this
    _type: Integer; // class of this object

{$IFDEF cSINGLE}
    Padding: byte;
{$ENDIF}
    gflags: Integer;

    data: pointer; // user data pointer
    body: PdxBody; // dynamics body associated with this object (if any)
    body_next: PdxGeom; // next geom in body's linked list of associated geoms
    final_posr: PdxPosR; // final position of the geom in world coordinates
    offset_posr: PdxPosR; // offset from body in local coordinates

    next: PdxGeom;
    tome: PPdxGeom;
    parent_space: PdxSpace;
    aabb: TdAABB;
    category_bits, collide_bits: longword;
  end;

  TGeomList = class(TList)
  private
    function GetItems(I: Integer): PdxGeom;
    procedure SetItems(I: Integer; const Value: PdxGeom);
  public
    property Items[I: Integer]: PdxGeom read GetItems write SetItems; default;
    procedure DeleteAllGeoms(DeleteDataAsObject: boolean = false);
  end;

  TdxSpace = record
    baseGeom: TdxGeom;
    count: Integer;
    first: PdxGeom;
    cleanup: Integer;
    current_index: Integer;
    current_geom: PdxGeom;
    lock_count: Integer;
  end;

  // Copies settings from TdxSpace, beacause pascal doeasn't do inheritance
  // for records
  TdxSimpleSpace = TdxSpace;

  // Copies settings from TdxSpace, beacause pascal doeasn't do inheritance
  // for records
  TdxHashSpace = record
    BaseSpace: TdxSpace;
    global_minlevel: Integer;
    global_maxlevel: Integer;
  end;

  TdxQuadTreeSpace = record
    BaseSpace: TdxSpace;
    Blocks: pointer;
    DirtyList: pointer;
  end;

  // TJointParams = (
  // parameters for limits and motors
  // Change: New Type added, sintax enforcement
  TJointParams = Integer;

  // These consts now have defined types

{$IFDEF PARODE}

const
  dJOINT_BREAK_UNKNOWN: TJointBreakMode = $0000;
  dJOINT_BROKEN: TJointBreakMode = $0001;
  dJOINT_DELETE_ON_BREAK: TJointBreakMode = $0002;
  dJOINT_BREAK_AT_B1_FORCE: TJointBreakMode = $0004;
  dJOINT_BREAK_AT_B1_TORQUE: TJointBreakMode = $0008;
  dJOINT_BREAK_AT_B2_FORCE: TJointBreakMode = $0010;
  dJOINT_BREAK_AT_B2_TORQUE: TJointBreakMode = $0020;
{$ENDIF}

const
  _priv_dParamLoStop = $000;
  _priv_dParamLoStop2 = $100;
  _priv_dParamLoStop3 = $200;

const
  dParamLoStop: TJointParams = _priv_dParamLoStop;
  dParamHiStop: TJointParams = _priv_dParamLoStop + 1;
  dParamVel: TJointParams = _priv_dParamLoStop + 2;
  dParamFMax: TJointParams = _priv_dParamLoStop + 3;
  dParamFudgeFactor: TJointParams = _priv_dParamLoStop + 4;
  dParamBounce: TJointParams = _priv_dParamLoStop + 5;
  dParamCFM: TJointParams = _priv_dParamLoStop + 6;
  dParamStopERP: TJointParams = _priv_dParamLoStop + 7;
  dParamStopCFM: TJointParams = _priv_dParamLoStop + 8;
  // parameters for suspension
  dParamSuspensionERP: TJointParams = _priv_dParamLoStop + 9;
  dParamSuspensionCFM: TJointParams = _priv_dParamLoStop + 10;
  dParamERP: TJointParams = _priv_dParamLoStop + 11;

  dParamGroup1: TJointParams = $000;
  dParamLoStop1: TJointParams = _priv_dParamLoStop;
  dParamHiStop1: TJointParams = _priv_dParamLoStop + 1;
  dParamVel1: TJointParams = _priv_dParamLoStop + 2;
  dParamFMax1: TJointParams = _priv_dParamLoStop + 3;
  dParamFudgeFactor1: TJointParams = _priv_dParamLoStop + 4;
  dParamBounce1: TJointParams = _priv_dParamLoStop + 5;
  dParamCFM1: TJointParams = _priv_dParamLoStop + 6;
  dParamStopERP1: TJointParams = _priv_dParamLoStop + 7;
  dParamStopCFM1: TJointParams = _priv_dParamLoStop + 8;
  // parameters for suspension
  dParamSuspensionERP1: TJointParams = _priv_dParamLoStop + 9;
  dParamSuspensionCFM1: TJointParams = _priv_dParamLoStop + 10;
  dParamERP1: TJointParams = _priv_dParamLoStop + 11;

  // SECOND AXEL
  // parameters for limits and motors
  dParamGroup2: TJointParams = $100;
  dParamLoStop2: TJointParams = _priv_dParamLoStop2;
  dParamHiStop2: TJointParams = _priv_dParamLoStop2 + 1;
  dParamVel2: TJointParams = _priv_dParamLoStop2 + 2;
  dParamFMax2: TJointParams = _priv_dParamLoStop2 + 3;
  dParamFudgeFactor2: TJointParams = _priv_dParamLoStop2 + 4;
  dParamBounce2: TJointParams = _priv_dParamLoStop2 + 5;
  dParamCFM2: TJointParams = _priv_dParamLoStop2 + 6;
  dParamStopERP2: TJointParams = _priv_dParamLoStop2 + 7;
  dParamStopCFM2: TJointParams = _priv_dParamLoStop2 + 8;
  // parameters for suspension
  dParamSuspensionERP2: TJointParams = _priv_dParamLoStop2 + 9;
  dParamSuspensionCFM2: TJointParams = _priv_dParamLoStop2 + 10;
  dParamERP2: TJointParams = _priv_dParamLoStop2 + 11;

  // THIRD AXEL
  // parameters for limits and motors
  dParamGroup3: TJointParams = $200;
  dParamLoStop3: TJointParams = _priv_dParamLoStop3;
  dParamHiStop3: TJointParams = _priv_dParamLoStop3 + 1;
  dParamVel3: TJointParams = _priv_dParamLoStop3 + 2;
  dParamFMax3: TJointParams = _priv_dParamLoStop3 + 3;
  dParamFudgeFactor3: TJointParams = _priv_dParamLoStop3 + 4;
  dParamBounce3: TJointParams = _priv_dParamLoStop3 + 5;
  dParamCFM3: TJointParams = _priv_dParamLoStop3 + 6;
  dParamStopERP3: TJointParams = _priv_dParamLoStop3 + 7;
  dParamStopCFM3: TJointParams = _priv_dParamLoStop3 + 8;
  // parameters for suspension
  dParamSuspensionERP3: TJointParams = _priv_dParamLoStop3 + 9;
  dParamSuspensionCFM3: TJointParams = _priv_dParamLoStop3 + 10;
  dParamERP3: TJointParams = _priv_dParamLoStop3 + 11;
  dParamGroup: TJointParams = $100;

  // added by PAR
{$IFDEF PARODE}
function dSphereGetClass: Integer; cdecl; external ODEDLL;
function dBoxGetClass: Integer; cdecl; external ODEDLL;
function dCylinderGetClass: Integer; cdecl; external ODEDLL;
function dCapsuleGetClass: Integer; cdecl; external ODEDLL;
function dRayGetClass: Integer; cdecl; external ODEDLL;
function dPlaneGetClass: Integer; cdecl; external ODEDLL;
function dConvexGetClass: Integer; cdecl; external ODEDLL;
function dTriMeshGetClass: Integer; cdecl; external ODEDLL;
function dHeightfieldGetClass: Integer; cdecl; external ODEDLL;
function dGeomTransformGetClass: Integer; cdecl; external ODEDLL;
{$ENDIF}
procedure dInitODE; cdecl; external ODEDLL;
function dInitODE2(uiInitFlags: longword): Integer; cdecl; external ODEDLL;

procedure dCloseODE; cdecl; external ODEDLL;
